--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <a id="Next-btn" href="">Next</a>
         </div>
-       <footer class=""><i class="fa fa-instagram"></i><a href="https://www.instagram.com/m42ajit/?hl=en">Ajit Mote</a></footer> 
+       <footer title="@m42ajit" class=""><i class="fa fa-instagram"></i><a href="https://www.instagram.com/m42ajit/?hl=en">Ajit Mote</a></footer> 
     </div>
     <script src="script.js"></script>
 </body>
